--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.datasource.password=
 
 #clever-could
-spring.datasource.url=jdbc:mysql://biepnwm7c22kl7moh38w-mysql.services.clever-cloud.com:3306/biepnwm7c22kl7moh38w?useSSL=false&serverTimezone=UTC
-spring.datasource.username=ub5p2qofnn069g3z
-spring.datasource.password=CzUmyAt8WDPiUdkFLja1
+spring.datasource.url=jdbc:mysql://u3f3kn2lax35cvhz:jUJDobbH49x9CRboSgYs@b6kqehojol3bfv9zgq9s-mysql.services.clever-cloud.com:3306/b6kqehojol3bfv9zgq9s
+spring.datasource.username=u3f3kn2lax35cvhz
+spring.datasource.password=jUJDobbH49x9CRboSgYs
 
 #actualizar y crear entidades en la base de datos
 spring.jpa.hibernate.ddl_auto=update
