--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl_auto=update
 
 #hibernate genera SQL optimizado
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.profiles.active=produccion
 #puerto
 server.port =  10000
 
